# OOP_LAB06

./: README.md
laba6/: CMakeLists.txt  main.cpp
laba6/include/: battle_visitor.h  bear.h  elf.h  factory.h  npc.h  observer.h  rogue.h  visitor.h
laba6/src/: battle_visitor.cpp  bear.cpp  elf.cpp  factory.cpp  npc.cpp  rogue.cpp
laba6/tests/: CMakeLists.txt  tests.cpp
